# glean

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.md  DEPLOY.zh-CN.md  LICENSE  Makefile  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.lite.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  package.json
.github/workflows/: ci-backend.yml  ci-frontend.yml  claude-code-review.yml  pre-release.yml  release.yml
backend/: CLAUDE.md  Dockerfile  conftest.py  pyproject.toml
backend/apps/api/: pyproject.toml
backend/apps/api/glean_api/: __init__.py  config.py  dependencies.py  main.py
backend/apps/api/glean_api/mcp/: server.py
backend/apps/api/glean_api/mcp/tools/: entries.py  subscriptions.py
backend/apps/api/glean_api/middleware/: __init__.py  logging.py
backend/apps/api/glean_api/routers/: __init__.py  admin.py  auth.py  entries.py  feeds.py  preference.py  system.py
backend/apps/api/tests/: __init__.py  test_admin_embedding_validation.py
backend/apps/worker/: pyproject.toml
backend/apps/worker/glean_worker/: __init__.py  config.py  main.py
backend/apps/worker/glean_worker/tasks/: __init__.py  bookmark_metadata.py  cleanup.py  embedding_rebuild.py  embedding_worker.py  feed_fetcher.py  preference_worker.py  subscription_cleanup.py
backend/apps/worker/tests/: __init__.py  test_preference_worker.py
backend/scripts/: create-admin-docker.sh  create-admin.py  entrypoint.sh
backend/tests/integration/: conftest.py  test_api_tokens.py  test_feeds_api.py  test_mcp_tools.py
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
frontend/: .eslintrc.cjs  CLAUDE.md  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
frontend/apps/admin/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/apps/admin/src/: App.tsx  electron.d.ts  main.tsx
frontend/apps/admin/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/apps/admin/src/hooks/: useEmbeddingConfig.ts  useEntries.ts  useFeeds.ts  useStats.ts  useUsers.ts
frontend/apps/admin/src/lib/: api.ts
frontend/apps/admin/src/pages/: DashboardPage.tsx  EntriesPage.tsx  FeedsPage.tsx  LoginPage.tsx  RegistrationSettingsPage.tsx  SettingsPage.tsx  UsersPage.tsx
frontend/apps/admin/src/stores/: authStore.ts  languageStore.ts
frontend/apps/admin/src/styles/: globals.css
frontend/apps/web/: ELECTRON.md  electron-builder.json5  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/apps/web/electron/: config.html  main.ts  preload.ts
frontend/apps/web/src/: App.tsx  electron.d.ts  main-nojsx.tsx  main-simple.tsx  main.tsx
frontend/apps/web/src/components/: ApiConfigDialog.tsx  ArticleOutline.tsx  ArticleReader.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/apps/web/src/components/EntryActions/: PreferenceButtons.tsx
frontend/apps/web/src/components/dialogs/: AddFeedDialog.tsx  CreateFolderDialog.tsx  CreateTagDialog.tsx  DeleteTagDialog.tsx  EditTagDialog.tsx  LogoutConfirmDialog.tsx  tagColors.ts
frontend/apps/web/src/components/sidebar/: SidebarBookmarksSection.tsx  SidebarFeedsSection.tsx  SidebarTagsSection.tsx  SidebarUserSection.tsx
frontend/apps/web/src/components/tabs/: APITokensTab.tsx  PreferenceTab.tsx  SubscriptionsTab.tsx
frontend/apps/web/src/hooks/: useBookmarks.ts  useContentRenderer.ts  useEntries.ts  useFolders.ts  useSubscriptions.ts  useTags.ts  useVectorizationStatus.ts
frontend/apps/web/src/lib/: html.ts
frontend/apps/web/src/pages/: BookmarksPage.tsx  LoginPage.tsx  PreferencePage.tsx  ReaderPage.tsx  RegisterPage.tsx  SettingsPage.tsx  SubscriptionsPage.tsx
frontend/apps/web/src/stores/: authStore.ts  bookmarkStore.ts  folderStore.ts  languageStore.ts  tagStore.ts  themeStore.ts  uiStore.ts
frontend/apps/web/src/styles/: globals.css
scripts/: create-admin.py  setup.sh  sync-version.js
